# uacpid

./: LICENSE  README  README.md  Setup.hs  TODO  TODO.md  changelog.md  uacpid.cabal
doc/: hcar-uacpid  hcar-uacpid.tex
doc/dev/events/: noaction  noevent
resources/: default-uacpid.conf  video
resources/man/: uacpid.1
resources/uacpid/: uacpid.conf
resources/uacpid/events/: anything
src/: main.hs
src/Uacpid/: Conf.hs  Events.hs  Log.hs
src/Uacpid/Control/Monad/: Error.hs  Except.hs
