name:                uacpid
version:             0.0.1
cabal-version:       >= 1.2
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2009 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
--homepage:            http://foo/bar/baz.html
--synopsis:            Foo
--description:         Bar Baz
category:            System
tested-with:         GHC>=6.10.1

executable           uacpid
   main-is:          main.hs
   hs-source-dirs:   src
   build-depends:    base, containers, directory, fez-conf, filepath, 
                     FindBin, network
   ghc-options:      -Wall
